fix: Fix a bug causing article banner images to remain blurred after the image has loaded

--- a/src/app/components/upcoming-event-banner/upcoming-event-banner.component.scss
+++ b/src/app/components/upcoming-event-banner/upcoming-event-banner.component.scss
@@ -83,7 +83,6 @@
   }
 
   b {
-    padding: 0 2px;
     font-weight: bold;
     color: var(--lcc-color--upcomingEventBanner-boldText);
   }
